--- a/po/ca_ES.po
+++ b/po/ca_ES.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2009-04-09 19:51+0200\n"
+"POT-Creation-Date: 2009-09-20 09:51+0200\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Jordi Vilà <jvila@tinet.org>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -539,6 +539,9 @@ msgstr ""
 msgid "No timers were deleted."
 msgstr ""
 
+msgid "No new events to announce."
+msgstr ""
+
 msgid "This version of EPGSearch does not support this service!"
 msgstr ""
 
@@ -903,13 +906,16 @@ msgstr ""
 msgid "Record"
 msgstr "Gravar"
 
-msgid "Announce only"
+msgid "Announce by OSD"
 msgstr ""
 
 msgid "Switch only"
 msgstr ""
 
 msgid "Announce and switch"
+msgstr ""
+
+msgid "Announce by mail"
 msgstr ""
 
 msgid "Selection"
@@ -1110,6 +1116,9 @@ msgid "Edit entry"
 msgstr ""
 
 msgid "Switch"
+msgstr ""
+
+msgid "Announce only"
 msgstr ""
 
 msgid "Announce ... minutes before start"
