--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2009-04-09 19:51+0200\n"
+"POT-Creation-Date: 2009-09-20 09:51+0200\n"
 "PO-Revision-Date: 2008-04-30 08:36+0200\n"
 "Last-Translator: Patrice Staudt <patrice.staudt@laposte.net>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -573,6 +573,9 @@ msgstr "La programmation n'a pas été changée."
 msgid "No timers were deleted."
 msgstr "Aucune programmation n'a été effacée."
 
+msgid "No new events to announce."
+msgstr ""
+
 msgid "This version of EPGSearch does not support this service!"
 msgstr "Cette version de EPGSearch ne supporte pas ce service!"
 
@@ -937,7 +940,8 @@ msgstr "Edition recherche"
 msgid "Record"
 msgstr "Enregistre"
 
-msgid "Announce only"
+#, fuzzy
+msgid "Announce by OSD"
 msgstr "Annoncer seulement début d'une programme"
 
 msgid "Switch only"
@@ -945,6 +949,10 @@ msgstr "Seulement changer de chaine"
 
 #, fuzzy
 msgid "Announce and switch"
+msgstr "Annoncer seulement début d'une programme"
+
+#, fuzzy
+msgid "Announce by mail"
 msgstr "Annoncer seulement début d'une programme"
 
 msgid "Selection"
@@ -1149,6 +1157,9 @@ msgstr "Editer l'entrée"
 msgid "Switch"
 msgstr "Seulement changer de chaine"
 
+msgid "Announce only"
+msgstr "Annoncer seulement début d'une programme"
+
 #, fuzzy
 msgid "Announce ... minutes before start"
 msgstr "Changer ... minutes avant le début"
@@ -1208,4 +1219,3 @@ msgstr "en %02ldh"
 #, c-format
 msgid "in %02ldm"
 msgstr "en %02ldm"
-
