--- a/HISTORY
+++ b/HISTORY
@@ -22,6 +22,7 @@ new:
 - Commit 0003-revert-now-obsolete-pointer-params.diff by TomJoad@vdr-portal.de
 - Commit 0004-some-small-fixes.diff by TomJoad@vdr-portal.de
   http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291452-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291452
+- Drop legacy code prior VDR 2.3.x
 
 2013-03-xx; Version 1.0.1 - maintenance release
 new:
