--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -22,6 +22,7 @@ neu:
 - Anwenden 0003-revert-now-obsolete-pointer-params.diff von TomJoad@vdr-portal.de
 - Anwenden 0004-some-small-fixes.diff von TomJoad@vdr-portal.de
   http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291452-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291452
+- Löschen Alt-Code vor VDR 2.3.x
 
 2013-03-xx: Version 1.0.1 - Maintenance Release
 neu:
