--- a/HISTORY
+++ b/HISTORY
@@ -25,6 +25,7 @@ new:
 - Drop legacy code prior VDR 2.3.x
 - Commit 0001-fixed-unresponsive-vdr.diff by TomJoad@vdr-portal.de
 - Commit 0002-removed-variableduplications.diff by TomJoad@vdr-portal.de
+- Commit 0003-more-cleanups.diff by TomJoad@vdr-portal.de
   http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291771-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291771
 
 2013-03-xx; Version 1.0.1 - maintenance release
