--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -25,6 +25,7 @@ neu:
 - Löschen Alt-Code vor VDR 2.3.x
 - Anwenden 0001-fixed-unresponsive-vdr.diff von TomJoad@vdr-portal.de
 - Anwenden 0002-removed-variableduplications.diff von TomJoad@vdr-portal.de
+- Anwenden 0003-more-cleanups.diff von TomJoad@vdr-portal.de
   http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291771-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291771
 
 2013-03-xx: Version 1.0.1 - Maintenance Release
